# agentos

./: .gitignore  DEPLOY_GCP.md  Dockerfile  LICENSE  PRD.md  README.md  deploy-gcp.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: spec.yaml
src/agentos/: __init__.py
src/agentos/cli/: __init__.py  main.py
src/agentos/mcp/: __init__.py  server.py
src/agentos/models/: __init__.py
src/agentos/registry/: __init__.py  seed_data.py  server.py
src/agentos/sdk/: __init__.py  client.py
tests/: conftest.py  test_mcp.py  test_registry.py  test_tools.py
